// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-container can mount field container 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item SharpForm__form-item--type-test-field SharpForm__form-item--has-label">
		<div class="SharpForm__field-header">
			<div class="row align-items-end">
				<div class="col d-flex">
					<label for="form-field_error.title" class="SharpForm__label form-label">
						My beautiful field
					</label>
				</div>
				<!---->
			</div>
		</div>
		<div class="SharpForm__field-content">
			<div id="form-field_error.title" class="SharpField">Template field</div>
		</div>
		<!---->
		<div class="SharpForm__help-message form-text">Do not fill this field</div>
	</div>
</div>
`;

exports[`field-container can mount field container with error 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item SharpForm__form-item--type-test-field SharpForm__form-item--danger SharpForm__form-item--has-label">
		<div class="SharpForm__field-header">
			<div class="row align-items-end">
				<div class="col d-flex">
					<label for="form-field_error.title" class="SharpForm__label form-label">
						My beautiful field
					</label>
				</div>
				<!---->
			</div>
		</div>
		<div class="SharpForm__field-content">
			<div id="form-field_error.title" class="SharpField">Template field</div>
		</div>
		<div class="invalid-feedback d-block">Must be a number</div>
		<div class="SharpForm__help-message form-text">Do not fill this field</div>
	</div>
</div>
`;

exports[`field-container can mount field container with extra style 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item SharpForm__form-item--type-test-field SharpForm__form-item--has-label" style="background: red;">
		<div class="SharpForm__field-header">
			<div class="row align-items-end">
				<div class="col d-flex">
					<label for="form-field_error.title" class="SharpForm__label form-label">
						My beautiful field
					</label>
				</div>
				<!---->
			</div>
		</div>
		<div class="SharpForm__field-content">
			<div id="form-field_error.title" extrastyle="background:red" class="SharpField">Template field</div>
		</div>
		<!---->
		<div class="SharpForm__help-message form-text">Do not fill this field</div>
	</div>
</div>
`;

exports[`field-container can mount field container with success 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item SharpForm__form-item--type-test-field SharpForm__form-item--success SharpForm__form-item--has-label">
		<div class="SharpForm__field-header">
			<div class="row align-items-end">
				<div class="col d-flex">
					<label for="form-field_error.title" class="SharpForm__label form-label">
						My beautiful field
					</label>
				</div>
				<!---->
			</div>
		</div>
		<div class="SharpForm__field-content">
			<div id="form-field_error.title" class="SharpField">Template field</div>
		</div>
		<!---->
		<div class="SharpForm__help-message form-text">Do not fill this field</div>
	</div>
</div>
`;
